tests/NormalTests/paczka1/small_fuzzy/50598259.err
Error in line 10: Y0CEYs5zWl S402 6,9
Error in line 11: W28mO S402 67,2
